--- a/DL770WinCE/DL770 Prototype.csproj
+++ b/DL770WinCE/DL770 Prototype.csproj
@@ -53,15 +53,15 @@
     <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Data.SqlServerCe, Version=3.5.0.0, Culture=neutral, PublicKeyToken=3be235df1c8d2ad3, processorArchitecture=MSIL">
-      <Private>False</Private>
+    <Reference Include="System.Data.SQLite, Version=1.0.79.0, Culture=neutral, PublicKeyToken=1fdb50b1b62b4c84, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>.\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="DataCollector.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -85,29 +85,24 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <Compile Include="RFID_DBDataSet.Designer.cs">
+    <Compile Include="rfidDbDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>RFID_DBDataSet.xsd</DependentUpon>
+      <DependentUpon>rfidDbDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="RWDev.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="RFID_DB.sdf">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="RFID_DBDataSet.xsc">
-      <DependentUpon>RFID_DBDataSet.xsd</DependentUpon>
+    <None Include="rfidDbDataSet.xsc">
+      <DependentUpon>rfidDbDataSet.xsd</DependentUpon>
     </None>
-    <None Include="RFID_DBDataSet.xsd">
+    <None Include="rfidDbDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>RFID_DBDataSet.Designer.cs</LastGenOutput>
+      <LastGenOutput>rfidDbDataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="RFID_DBDataSet.xss">
-      <DependentUpon>RFID_DBDataSet.xsd</DependentUpon>
+    <None Include="rfidDbDataSet.xss">
+      <DependentUpon>rfidDbDataSet.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <Import Condition="'$(TargetFrameworkVersion)' == 'v1.0'" Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.v1.targets" />
